--- a/en.html
+++ b/en.html
@@ -2,8 +2,148 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Genevieve Perron Mignero - Resume</title>
+  <title>The HTML5 Herald</title>
+  <link href="https://fonts.googleapis.com/css?family=Assistant" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/application.css">
 </head>
 <body>
+  <header>
+    <div>
+      <h1>Genevieve Perron Migneron</h1>
+      <p>Frontend Developer</p>
+    </div>
+    <div class="header-info">
+      <div class="row">
+        <div class="header-info-box">514-774-0567</div>
+        <div class="header-info-box">info@gen-migneron.com</div>
+        <div class="header-info-box">Montreal, Qc</div>
+      </div>
+    </div>
+  </header>
+  <section class="content">
+    <div class="intro">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat neque non nobis hic facilis necessitatibus, voluptatum reiciendis in perferendis ullam, porro nam! Culpa pariatur aliquam ea obcaecati odio, asperiores soluta.
+    </div>
+    <!-- skills -->
+    <div class="section-header">
+      Skills
+    </div>
+    <div class="section-content">
+      <div class="row">
+        <div class="section-list-container">
+          <h2 class="bold-text">Frontend</h2>
+          <ul class="section-list">
+            <li>HTML<span>(HAML, slim, erb)</span></li>
+            <li>CSS<span>(SASS, SCSS)</span></li>
+            <li>Javascript <span>(Angular, React)</span></li>
+          </ul>
+        </div>
+        <div class="section-list-container">
+          <h2 class="bold-text">Backend</h2>
+          <ul class="section-list">
+            <li>Ruby</li>
+            <li>PHP</li>
+            <li>C#</li>
+          </ul>
+        </div>
+        <div class="section-list-container">
+          <h2 class="bold-text">General</h2>
+          <ul class="section-list">
+            <li>Version control systems <span>(Git, SVN, TFS)</span></li>
+            <li>Continous integration tools</li>
+            <li>Unit testing</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <!-- experience -->
+    <div class="section-header">
+      Experience
+    </div>
+    <div class="section-content">
+      <div class="row">
+        <div class="career-a">
+          <h2 class="bold-text">Glossier</h2>
+          <p class="job-title">Frontend Engineer</p>
+          <p class="small-text">March 2017 - December 2018</p>
+        </div>
+        <div class="career-b">
+          <ul class="career-list">
+            <li>Continously improve the company's</li>
+            <li>Implement GDPR compliance</li>
+            <li>Ensure that the website is A11y compatible</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="section-content">
+      <div class="row">
+        <div class="career-a">
+          <h2 class="bold-text">Dynamo</h2>
+          <p class="job-title">Frontend Engineer</p>
+          <p class="small-text">December 2014 - March 2017</p>
+        </div>
+        <div class="career-b">
+          <ul class="career-list">
+            <li>Maintained and improved websites previously built by the company</li>
+            <li>Build websites from scratch while following W3C standards and insuring crossbrowser compatibility</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="section-content container">
+      <div class="row">
+        <div class="career-a">
+          <h2 class="bold-text">Defacto Interactif</h2>
+          <p class="job-title">Junior Frontend Engineer</p>
+          <p class="small-text">August 2013 - September 2014</p>
+        </div>
+        <div class="career-b">
+          <ul class="career-list">
+            <li>Maintained and improved websites previously built by the company</li>
+            <li>Build websites from scratch with or without a CMS (Sitecore/Umbraco)</li>
+            <li>Build Facebook contests using their API</li>
+            <li>Created custom HTML emails for clients</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <!-- education -->
+    <div class="section-header">
+      Education
+    </div>
+    <div class="section-content container">
+      <div class="row">
+        <div class="col-md-12">
+          <h2 class="bold-text">Maisonneuve College</h2>
+          <p class="small-text">2010-2012</p>
+          <div>Technique d'integration multimedia</div>
+        </div>
+      </div>
+    </div>
+    <!-- interest -->
+    <div class="section-header">
+      Interests and hobbies
+    </div>
+    <div class="section-content container">
+      <div class="row">
+        <ul class="interests-hobbies">
+          <li>Photography</li>
+          <li>Travelling</li>
+          <li>Woodworking</li>
+        </ul>
+        <ul class="interests-hobbies">
+          <li>Skiing</li>
+          <li>Weight lifting</li>
+          <li>Cycling</li>
+        </ul>
+        <ul class="interests-hobbies">
+          <li>Movies</li>
+          <li>Home automation</li>
+          <li>Video games</li>
+        </ul>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
