add french content and en pdf

--- a/en.html
+++ b/en.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>The HTML5 Herald</title>
+  <title>Genevieve Perron Migneron - Resume</title>
   <link href="https://fonts.googleapis.com/css?family=Assistant" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/application.css">
 </head>
@@ -22,7 +22,8 @@
   </header>
   <section class="content">
     <div class="intro">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat neque non nobis hic facilis necessitatibus, voluptatum reiciendis in perferendis ullam, porro nam! Culpa pariatur aliquam ea obcaecati odio, asperiores soluta.
+      Fluent in both french and english. For the past 4 years, I've been evolving in a Rails environment, while using React and Angular on the frontend side. 
+      I am very familiar with unit testing, as well as continous integration tools.
     </div>
     <!-- skills -->
     <div class="section-header">
@@ -33,9 +34,9 @@
         <div class="section-list-container">
           <h2 class="bold-text">Frontend</h2>
           <ul class="section-list">
-            <li>HTML<span>(HAML, slim, erb)</span></li>
-            <li>CSS<span>(SASS, SCSS)</span></li>
-            <li>Javascript <span>(Angular, React)</span></li>
+            <li>HTML <span>(HAML, slim, erb)</span></li>
+            <li>CSS <span>(SASS, SCSS, LESS)</span></li>
+            <li>Javascript <span>(Angular, React, jQuery)</span></li>
           </ul>
         </div>
         <div class="section-list-container">
@@ -69,9 +70,10 @@
         </div>
         <div class="career-b">
           <ul class="career-list">
-            <li>Continously improve the company's</li>
-            <li>Implement GDPR compliance</li>
-            <li>Ensure that the website is A11y compatible</li>
+            <li>Building new features for the company's website</li>
+            <li>Implementing GDPR compliance</li>
+            <li>Ensuring the website's is A11y compatibility</li>
+            <li>Write and receive constructive code reviews</li>
           </ul>
         </div>
       </div>
@@ -85,8 +87,8 @@
         </div>
         <div class="career-b">
           <ul class="career-list">
-            <li>Maintained and improved websites previously built by the company</li>
-            <li>Build websites from scratch while following W3C standards and insuring crossbrowser compatibility</li>
+            <li>Maintaining and improving websites previously built by the company</li>
+            <li>Building websites from scratch while following W3C standards and insuring crossbrowser compatibility</li>
           </ul>
         </div>
       </div>
@@ -100,10 +102,10 @@
         </div>
         <div class="career-b">
           <ul class="career-list">
-            <li>Maintained and improved websites previously built by the company</li>
-            <li>Build websites from scratch with or without a CMS (Sitecore/Umbraco)</li>
+            <li>Maintaining and improving websites previously built by the company</li>
+            <li>Building websites from scratch with Umbraco and Sitecore as a CMS</li>
             <li>Build Facebook contests using their API</li>
-            <li>Created custom HTML emails for clients</li>
+            <li>Created custom HTML emails</li>
           </ul>
         </div>
       </div>
