--- a/fr.html
+++ b/fr.html
@@ -3,7 +3,148 @@
 <head>
   <meta charset="utf-8">
   <title>Genevieve Perron Migneron - CV</title>
+  <link href="https://fonts.googleapis.com/css?family=Assistant" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/application.css">
 </head>
 <body>
+  <header>
+    <div>
+      <h1>Genevieve Perron Migneron</h1>
+      <p>Developpeur web frontend</p>
+    </div>
+    <div class="header-info">
+      <div class="row">
+        <div class="header-info-box">514-774-0567</div>
+        <div class="header-info-box">info@gen-migneron.com</div>
+        <div class="header-info-box">Montreal, Qc</div>
+      </div>
+    </div>
+  </header>
+  <section class="content">
+    <div class="intro">
+      À l'aise avec le français autant que l'anglais, ces 4 dernières année j'ai évolué dans un environnement Ruby on Rails, ainsi que React et Angular pour le frontend.
+      Je suis aussi familière avec les tests unitaires ainsi que les outils d'intégration continue.
+    </div>
+    <!-- skills -->
+    <div class="section-header">
+      Compétence
+    </div>
+    <div class="section-content">
+      <div class="row">
+        <div class="section-list-container">
+          <h2 class="bold-text">Frontend</h2>
+          <ul class="section-list">
+            <li>HTML <span>(HAML, slim, erb)</span></li>
+            <li>CSS <span>(SASS, SCSS, LESS)</span></li>
+            <li>Javascript <span>(Angular, React, jQuery)</span></li>
+          </ul>
+        </div>
+        <div class="section-list-container">
+          <h2 class="bold-text">Backend</h2>
+          <ul class="section-list">
+            <li>Ruby</li>
+            <li>PHP</li>
+            <li>C#</li>
+          </ul>
+        </div>
+        <div class="section-list-container">
+          <h2 class="bold-text">General</h2>
+          <ul class="section-list">
+            <li>Git, SVN, TFS</li>
+            <li>Outils d'intégration continue</li>
+            <li>Tests unitaires</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <!-- experience -->
+    <div class="section-header">
+      Expérience de travail
+    </div>
+    <div class="section-content">
+      <div class="row">
+        <div class="career-a">
+          <h2 class="bold-text">Glossier</h2>
+          <p class="job-title">Développeur frontend</p>
+          <p class="small-text">Mars 2017 - Décembre 2018</p>
+        </div>
+        <div class="career-b">
+          <ul class="career-list">
+            <li>Ajouter de nouvelles fonctions au site web actual</li>
+            <li>S'assurer de la conformité aux normes GDOR </li>
+            <li>S'assurer que le site web soit accessible</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="section-content">
+      <div class="row">
+        <div class="career-a">
+          <h2 class="bold-text">Dynamo</h2>
+          <p class="job-title">Développeur frontend</p>
+          <p class="small-text">Décembre 2014 - Mars 2017</p>
+        </div>
+        <div class="career-b">
+          <ul class="career-list">
+            <li>Maintenir les sites web de certains clients</li>
+            <li>Développer des sites web tout en suivant les normes W3C et en s'assurant que ceux-ci soit compatible avec plusieur navigateurs</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="section-content container">
+      <div class="row">
+        <div class="career-a">
+          <h2 class="bold-text">Defacto Interactif</h2>
+          <p class="job-title">Développeur web junior</p>
+          <p class="small-text">Août 2013 - Septembre 2014</p>
+        </div>
+        <div class="career-b">
+          <ul class="career-list">
+            <li>Maintenir et apporter des modifications diverses au site web de certains clients</li>
+            <li>Développer des sites web en utilisant les CMS Sitecore et Umbraco</li>
+            <li>Développer des concours sur la plateforme de Facebook et utiliser leur API</li>
+            <li>Intégrer des modèles personnalisés d'infolettres</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <!-- education -->
+    <div class="section-header">
+      Éducation
+    </div>
+    <div class="section-content container">
+      <div class="row">
+        <div class="col-md-12">
+          <h2 class="bold-text">Collège Maisonneuve</h2>
+          <p class="small-text">2010-2012</p>
+          <div>Technique d'intégration multimédia</div>
+        </div>
+      </div>
+    </div>
+    <!-- interest -->
+    <div class="section-header">
+      Loisirs et intérêts
+    </div>
+    <div class="section-content container">
+      <div class="row">
+        <ul class="interests-hobbies">
+          <li>Photographie</li>
+          <li>Voyager</li>
+          <li>Hébénisterie</li>
+        </ul>
+        <ul class="interests-hobbies">
+          <li>Ski</li>
+          <li>Haltérophilie</li>
+          <li>Vélo</li>
+        </ul>
+        <ul class="interests-hobbies">
+          <li>Films</li>
+          <li>Domotique</li>
+          <li>Jeux videos</li>
+        </ul>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
