--- a/fr.html
+++ b/fr.html
@@ -59,7 +59,7 @@
     </div>
     <!-- experience -->
     <div class="section-header">
-      Expérience de travail
+      Expériences de travail
     </div>
     <div class="section-content">
       <div class="row">
