--- a/en.html
+++ b/en.html
@@ -72,8 +72,9 @@
           <ul class="career-list">
             <li>Building new features for the company's website</li>
             <li>Implementing GDPR compliance</li>
-            <li>Ensuring the website's is A11y compatibility</li>
+            <li>Ensuring the website's compliance with accessibility standards</li>
             <li>Write and receive constructive code reviews</li>
+            <li>Working in an agile environment</li>
           </ul>
         </div>
       </div>
@@ -88,7 +89,7 @@
         <div class="career-b">
           <ul class="career-list">
             <li>Maintaining and improving websites previously built by the company</li>
-            <li>Building websites from scratch while following W3C standards and insuring crossbrowser compatibility</li>
+            <li>Building websites from scratch while following W3C standards and ensuring crossbrowser compatibility</li>
           </ul>
         </div>
       </div>
@@ -104,8 +105,8 @@
           <ul class="career-list">
             <li>Maintaining and improving websites previously built by the company</li>
             <li>Building websites from scratch with Umbraco and Sitecore as a CMS</li>
-            <li>Build Facebook contests using their API</li>
-            <li>Created custom HTML emails</li>
+            <li>Building Facebook contests using their API</li>
+            <li>Creating custom newsletter templates</li>
           </ul>
         </div>
       </div>
