--- a/fr.html
+++ b/fr.html
@@ -22,12 +22,12 @@
   </header>
   <section class="content">
     <div class="intro">
-      À l'aise avec le français autant que l'anglais, ces 4 dernières année j'ai évolué dans un environnement Ruby on Rails, ainsi que React et Angular pour le frontend.
+      À l'aise avec le français autant que l'anglais, ces 4 dernières annéees j'ai évolué dans un environnement Ruby on Rails, ainsi que React et Angular pour le frontend.
       Je suis aussi familière avec les tests unitaires ainsi que les outils d'intégration continue.
     </div>
     <!-- skills -->
     <div class="section-header">
-      Compétence
+      Compétences
     </div>
     <div class="section-content">
       <div class="row">
@@ -48,7 +48,7 @@
           </ul>
         </div>
         <div class="section-list-container">
-          <h2 class="bold-text">General</h2>
+          <h2 class="bold-text">Général</h2>
           <ul class="section-list">
             <li>Git, SVN, TFS</li>
             <li>Outils d'intégration continue</li>
@@ -70,9 +70,10 @@
         </div>
         <div class="career-b">
           <ul class="career-list">
-            <li>Ajouter de nouvelles fonctions au site web actual</li>
-            <li>S'assurer de la conformité aux normes GDOR </li>
-            <li>S'assurer que le site web soit accessible</li>
+            <li>Ajouter de nouvelles fonctions au site web actuel</li>
+            <li>S'assurer de la conformité aux normes GDPR </li>
+            <li>S'assurer que le site web réponde aux normes d'accessibilité</li>
+            <li>Travailler dans un environnement agile</li>
           </ul>
         </div>
       </div>
@@ -87,7 +88,7 @@
         <div class="career-b">
           <ul class="career-list">
             <li>Maintenir les sites web de certains clients</li>
-            <li>Développer des sites web tout en suivant les normes W3C et en s'assurant que ceux-ci soit compatible avec plusieur navigateurs</li>
+            <li>Développer des sites web tout en suivant les normes W3C et en s'assurant que ceux-ci soient compatibles avec plusieurs navigateurs</li>
           </ul>
         </div>
       </div>
