fix copy, spacing, generate new pdf

--- a/fr.html
+++ b/fr.html
@@ -10,7 +10,7 @@
   <header>
     <div>
       <h1>Genevieve Perron Migneron</h1>
-      <p>Developpeur web frontend</p>
+      <p>Developpeur frontend</p>
     </div>
     <div class="header-info">
       <div class="row">
@@ -22,8 +22,7 @@
   </header>
   <section class="content">
     <div class="intro">
-      À l'aise avec le français autant que l'anglais, ces 4 dernières annéees j'ai évolué dans un environnement Ruby on Rails, ainsi que React et Angular pour le frontend.
-      Je suis aussi familière avec les tests unitaires ainsi que les outils d'intégration continue.
+      Je suis développeur frontend depuis environ 6 ans. Durant les 4 dernières années, j’ai évolué dans un environnement Ruby, et utilisé des frameworks Javascript tel qu’Angular et React. Je suis aussi familière avec les tests unitaires, ainsi que les outils d’intégration continue.
     </div>
     <!-- skills -->
     <div class="section-header">
@@ -36,7 +35,7 @@
           <ul class="section-list">
             <li>HTML <span>(HAML, slim, erb)</span></li>
             <li>CSS <span>(SASS, SCSS, LESS)</span></li>
-            <li>Javascript <span>(Angular, React, jQuery)</span></li>
+            <li>JavaScript <span>(Angular, React, jQuery)</span></li>
           </ul>
         </div>
         <div class="section-list-container">
