--- a/en.html
+++ b/en.html
@@ -22,8 +22,7 @@
   </header>
   <section class="content">
     <div class="intro">
-      Fluent in both french and english. For the past 4 years, I've been evolving in a Rails environment, while using React and Angular on the frontend side. 
-      I am very familiar with unit testing, as well as continous integration tools.
+      I am a front end developer with about 6 years of experience. In the past 4 years, I’ve been evolving in a Rails environment, while using modern JavaScript frameworks such as React and Angular on the front-end side. I am familiar with unit testing, as well as continuous integration tools. 
     </div>
     <!-- skills -->
     <div class="section-header">
@@ -36,7 +35,7 @@
           <ul class="section-list">
             <li>HTML <span>(HAML, slim, erb)</span></li>
             <li>CSS <span>(SASS, SCSS, LESS)</span></li>
-            <li>Javascript <span>(Angular, React, jQuery)</span></li>
+            <li>JavaScript <span>(Angular, React, jQuery)</span></li>
           </ul>
         </div>
         <div class="section-list-container">
