fix spelling mistake

--- a/fr.html
+++ b/fr.html
@@ -131,7 +131,7 @@
         <ul class="interests-hobbies">
           <li>Photographie</li>
           <li>Voyager</li>
-          <li>Hébénisterie</li>
+          <li>Ébénisterie</li>
         </ul>
         <ul class="interests-hobbies">
           <li>Ski</li>
