--- a/en.html
+++ b/en.html
@@ -21,7 +21,7 @@
   </header>
   <section class="content">
     <div class="intro">
-      I am a front end developer with about 6 years of experience. In the past 4 years, I’ve been evolving in a Rails environment, while using modern JavaScript frameworks such as React and Angular on the front-end side. I am familiar with unit testing, as well as continuous integration tools. 
+      I am a front end developer with about 7 years of experience. In the past 4 years, I’ve been evolving in a Rails environment, while using modern JavaScript frameworks such as React and Angular on the front-end side. I am familiar with unit testing, as well as continuous integration tools. 
     </div>
     <!-- skills -->
     <div class="section-header">
@@ -34,7 +34,7 @@
           <ul class="section-list">
             <li>HTML <span>(HAML, slim, erb)</span></li>
             <li>CSS <span>(SASS, SCSS, LESS)</span></li>
-            <li>JavaScript <span>(Angular, React, jQuery)</span></li>
+            <li>JavaScript <span>(Angular, React, Vue)</span></li>
           </ul>
         </div>
         <div class="section-list-container">
@@ -49,7 +49,7 @@
           <h2 class="bold-text">General</h2>
           <ul class="section-list">
             <li>Version control systems <span>(Git, SVN, TFS)</span></li>
-            <li>Continous integration tools</li>
+            <li>CI/CD tools</li>
             <li>Unit testing</li>
           </ul>
         </div>
@@ -58,6 +58,35 @@
     <!-- experience -->
     <div class="section-header">
       Experience
+    </div>
+    <div class="section-content">
+      <div class="row">
+        <div class="career-a">
+          <h2 class="bold-text">GOLO Mobile inc.</h2>
+          <p class="job-title">Frontend developer</p>
+          <p class="small-text">September 2019</p>
+        </div>
+        <div class="career-b">
+          <ul class="career-list">
+            <li>Building and maintaining our internal tools, as well as the main website.</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="section-content">
+      <div class="row">
+        <div class="career-a">
+          <h2 class="bold-text">Hydrogène Solutions Web</h2>
+          <p class="job-title">Frontend developer</p>
+          <p class="small-text">May 2019</p>
+        </div>
+        <div class="career-b">
+          <ul class="career-list">
+            <li>Building our internal design system on Vue.js</li>
+            <li>Developing and maintaining different websites and platforms for our clients.</li>
+          </ul>
+        </div>
+      </div>
     </div>
     <div class="section-content">
       <div class="row">
@@ -96,7 +125,7 @@
       <div class="row">
         <div class="career-a">
           <h2 class="bold-text">Defacto Interactif</h2>
-          <p class="job-title">Junior Frontend Engineer</p>
+          <p class="job-title">Junior Frontend developer</p>
           <p class="small-text">August 2013 - September 2014</p>
         </div>
         <div class="career-b">
@@ -120,29 +149,6 @@
           <p class="small-text">2010-2012</p>
           <div>Technique d'integration multimedia</div>
         </div>
-      </div>
-    </div>
-    <!-- interest -->
-    <div class="section-header">
-      Interests and hobbies
-    </div>
-    <div class="section-content container">
-      <div class="row">
-        <ul class="interests-hobbies">
-          <li>Photography</li>
-          <li>Travelling</li>
-          <li>Woodworking</li>
-        </ul>
-        <ul class="interests-hobbies">
-          <li>Skiing</li>
-          <li>Weight lifting</li>
-          <li>Cycling</li>
-        </ul>
-        <ul class="interests-hobbies">
-          <li>Movies</li>
-          <li>Home automation</li>
-          <li>Video games</li>
-        </ul>
       </div>
     </div>
   </section>
