--- a/fr.html
+++ b/fr.html
@@ -34,7 +34,7 @@
           <ul class="section-list">
             <li>HTML <span>(HAML, slim, erb)</span></li>
             <li>CSS <span>(SASS, SCSS, LESS)</span></li>
-            <li>JavaScript <span>(Angular, React, jQuery)</span></li>
+            <li>JavaScript <span>(Angular, React, Vue)</span></li>
           </ul>
         </div>
         <div class="section-list-container">
@@ -58,6 +58,35 @@
     <!-- experience -->
     <div class="section-header">
       Expériences de travail
+    </div>
+    <div class="section-content">
+      <div class="row">
+        <div class="career-a">
+          <h2 class="bold-text">GOLO Mobile inc.</h2>
+          <p class="job-title">Développeur frontend</p>
+          <p class="small-text">Septembre 2019</p>
+        </div>
+        <div class="career-b">
+          <ul class="career-list">
+            <li>Développer et maintenir les outils internes ainsi que le site web principale.</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="section-content">
+      <div class="row">
+        <div class="career-a">
+          <h2 class="bold-text">Hydrogène Solutions Web</h2>
+          <p class="job-title">Développeur frontend</p>
+          <p class="small-text">Mai 2019</p>
+        </div>
+        <div class="career-b">
+          <ul class="career-list">
+            <li>Développer le design system interne de la compagnie en utilisant Vue</li>
+            <li>Développer et maintenir des sites et plateformes pour nos clients.</li>
+          </ul>
+        </div>
+      </div>
     </div>
     <div class="section-content">
       <div class="row">
@@ -119,29 +148,6 @@
           <p class="small-text">2010-2012</p>
           <div>Technique d'intégration multimédia</div>
         </div>
-      </div>
-    </div>
-    <!-- interest -->
-    <div class="section-header">
-      Loisirs et intérêts
-    </div>
-    <div class="section-content container">
-      <div class="row">
-        <ul class="interests-hobbies">
-          <li>Photographie</li>
-          <li>Voyager</li>
-          <li>Ébénisterie</li>
-        </ul>
-        <ul class="interests-hobbies">
-          <li>Ski</li>
-          <li>Haltérophilie</li>
-          <li>Vélo</li>
-        </ul>
-        <ul class="interests-hobbies">
-          <li>Films</li>
-          <li>Domotique</li>
-          <li>Jeux videos</li>
-        </ul>
       </div>
     </div>
   </section>
