--- a/en.html
+++ b/en.html
@@ -69,6 +69,7 @@
         <div class="career-b">
           <ul class="career-list">
             <li>Building and maintaining our internal tools, as well as the main website.</li>
+            <li>Working in an agile environment</li>
           </ul>
         </div>
       </div>
