--- a/fr.html
+++ b/fr.html
@@ -69,6 +69,7 @@
         <div class="career-b">
           <ul class="career-list">
             <li>Développer et maintenir les outils internes ainsi que le site web principale.</li>
+            <li>Travailler dans un environnement agile</li>
           </ul>
         </div>
       </div>
@@ -139,7 +140,7 @@
     </div>
     <!-- education -->
     <div class="section-header">
-      Éducation
+      Formation
     </div>
     <div class="section-content container">
       <div class="row">
