--- a/fr.html
+++ b/fr.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Genevieve Perron Migneron - CV</title>
-  <link href="https://fonts.googleapis.com/css?family=Assistant" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Assistant:200,300,400,600,700,800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/application.css">
 </head>
 <body>
@@ -21,7 +21,7 @@
   </header>
   <section class="content">
     <div class="intro">
-      Je suis développeur frontend depuis environ 6 ans. Durant les 4 dernières années, j’ai évolué dans un environnement Ruby, et utilisé des frameworks Javascript tel qu’Angular et React. Je suis aussi familière avec les tests unitaires, ainsi que les outils d’intégration continue.
+      Depuis environ 7 ans, je construis des interfaces utilisateur pour des applications web testables et évolutives.
     </div>
     <!-- skills -->
     <div class="section-header">
@@ -32,9 +32,9 @@
         <div class="section-list-container">
           <h2 class="bold-text">Frontend</h2>
           <ul class="section-list">
-            <li>HTML <span>(HAML, slim, erb)</span></li>
-            <li>CSS <span>(SASS, SCSS, LESS)</span></li>
-            <li>JavaScript <span>(Angular, React, Vue)</span></li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript <span>(Angular, React/Redux, Vue)</span></li>
           </ul>
         </div>
         <div class="section-list-container">
@@ -49,8 +49,8 @@
           <h2 class="bold-text">Général</h2>
           <ul class="section-list">
             <li>Git, SVN, TFS</li>
-            <li>Outils d'intégration continue</li>
-            <li>Tests unitaires</li>
+            <li>Outils CI/CD</li>
+            <li>Tests unitaires (Jest, Enzyme, Chai)</li>
           </ul>
         </div>
       </div>
@@ -69,6 +69,8 @@
         <div class="career-b">
           <ul class="career-list">
             <li>Développer et maintenir les outils internes ainsi que le site web principale.</li>
+            <li>Supporter l'équipe dev ops lors des deploiments</li>
+            <li>Participer au processus de recrutement</li>
             <li>Travailler dans un environnement agile</li>
           </ul>
         </div>
@@ -83,7 +85,7 @@
         </div>
         <div class="career-b">
           <ul class="career-list">
-            <li>Développer le design system interne de la compagnie en utilisant Vue</li>
+            <li>Développer le design system interne de la compagnie en utilisant Vue.js</li>
             <li>Développer et maintenir des sites et plateformes pour nos clients.</li>
           </ul>
         </div>
