--- a/en.html
+++ b/en.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Genevieve Perron Migneron - Resume</title>
-  <link href="https://fonts.googleapis.com/css?family=Assistant" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Assistant:200,300,400,600,700,800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/application.css">
 </head>
 <body>
@@ -21,7 +21,7 @@
   </header>
   <section class="content">
     <div class="intro">
-      I am a front end developer with about 7 years of experience. In the past 4 years, I’ve been evolving in a Rails environment, while using modern JavaScript frameworks such as React and Angular on the front-end side. I am familiar with unit testing, as well as continuous integration tools. 
+      I build beautiful user interfaces for testable and scalable web applications.
     </div>
     <!-- skills -->
     <div class="section-header">
@@ -32,9 +32,9 @@
         <div class="section-list-container">
           <h2 class="bold-text">Frontend</h2>
           <ul class="section-list">
-            <li>HTML <span>(HAML, slim, erb)</span></li>
-            <li>CSS <span>(SASS, SCSS, LESS)</span></li>
-            <li>JavaScript <span>(Angular, React, Vue)</span></li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript <span>(Angular, React/Redux, Vue)</span></li>
           </ul>
         </div>
         <div class="section-list-container">
@@ -50,7 +50,7 @@
           <ul class="section-list">
             <li>Version control systems <span>(Git, SVN, TFS)</span></li>
             <li>CI/CD tools</li>
-            <li>Unit testing</li>
+            <li>Unit testing <span>(Jest, Enzyme, Chai)</span></li>
           </ul>
         </div>
       </div>
@@ -69,6 +69,8 @@
         <div class="career-b">
           <ul class="career-list">
             <li>Building and maintaining our internal tools, as well as the main website.</li>
+            <li>Supporting the dev ops team during deployments</li>
+            <li>Participating in the recrutement process</li>
             <li>Working in an agile environment</li>
           </ul>
         </div>
@@ -85,6 +87,7 @@
           <ul class="career-list">
             <li>Building our internal design system on Vue.js</li>
             <li>Developing and maintaining different websites and platforms for our clients.</li>
+            <li>Mentor junior developers</li>
           </ul>
         </div>
       </div>
